# tinyLoRaSW

./: README.md
tinyLoRa_LoRaWanMacNode/: CMakeLists.txt
tinyLoRa_LoRaWanMacNode/src/: CMakeLists.txt
tinyLoRa_LoRaWanMacNode/src/apps/LoRaMac/: CMakeLists.txt
tinyLoRa_LoRaWanMacNode/src/apps/LoRaMac/common/: LmHandlerMsgDisplay.c  NvmDataMgmt.c  cli.h
tinyLoRa_LoRaWanMacNode/src/apps/LoRaMac/common/LmHandler/: LmHandler.c
tinyLoRa_LoRaWanMacNode/src/apps/LoRaMac/periodic-uplink-lpp/tinyLoRa/: main.c
tinyLoRa_LoRaWanMacNode/src/apps/ping-pong/: CMakeLists.txt
tinyLoRa_LoRaWanMacNode/src/apps/ping-pong/tinyLoRa/: main.c
tinyLoRa_LoRaWanMacNode/src/boards/: CMakeLists.txt  RP2040-platform.h  adc-board.h  board.h  gpio-board.h  gps-board.h  i2c-board.h  pinName-RP2040.h  rtc-board.h  spi-board.h  sx126x-board.h  uart-board.h  uart-usb-board.h
tinyLoRa_LoRaWanMacNode/src/boards/tinyLoRa/: CMakeLists.txt  adc-board.c  board-config.h  board.c  delay-board.c  eeprom-board.c  gpio-board.c  gps-board.c  i2c-board.c  lpm-board.c  rtc-board.c  spi-board.c  sx1261mbxbas-board.c  uart-board.c
tinyLoRa_LoRaWanMacNode/src/mac/: CMakeLists.txt  LoRaMac.h  LoRaMacClassB.h  LoRaMacConfirmQueue.c  LoRaMacTypes.h
tinyLoRa_LoRaWanMacNode/src/mac/region/: Region.h  RegionCommon.c
tinyLoRa_LoRaWanMacNode/src/peripherals/: CMakeLists.txt  gpio-ioe.h  mag3110.c  mma8451.c  mpl3115.c  pam7q.c  sx1509.c  sx9500.c
tinyLoRa_LoRaWanMacNode/src/peripherals/soft-se/: se-identity.h  soft-se-hal.c  soft-se-hal.h
tinyLoRa_LoRaWanMacNode/src/radio/: CMakeLists.txt
tinyLoRa_LoRaWanMacNode/src/radio/sx126x/: radio.c  sx126x.c  sx126x.h
tinyLoRa_LoRaWanMacNode/src/radio/sx1272/: sx1272.c  sx1272.h
tinyLoRa_LoRaWanMacNode/src/radio/sx1276/: sx1276.c  sx1276.h
tinyLoRa_LoRaWanMacNode/src/system/: CMakeLists.txt  sx-adc.c  sx-adc.h  sx-delay.c  sx-delay.h  sx-fifo.c  sx-fifo.h  sx-gpio.c  sx-gpio.h  sx-gps.c  sx-gps.h  sx-i2c.c  sx-i2c.h  sx-nvmm.c  sx-nvmm.h  sx-serial.h  sx-spi.h  sx-systime.c  sx-systime.h  sx-timer.c  sx-timer.h  sx-uart.c  sx-uart.h
